@@ -1,3 +1,7 @@
+2011-07-31  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* change colors in configuration record into RGB triplets
+
 2011-07-30  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* apply and ok in configuration window
